--- a/index.html
+++ b/index.html
@@ -1,79 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cookie.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="slider">
-        
+
     </div>
     <header>
-    <nav>
-        <div class="nvright">
-            <img class="img" src="space.png" alt="spacex">
-            <a href="" class="right pad">FALCON 9</a>
-            <a href="" class="right pad">FALCON HEAVY</a>
-            <a href="" class="right pad">DRAGON</a>
-            <a href="" class="right pad">STARSHIP</a>
-            <a href="" class="right pad">HUMAN SPACEFliGHT</a>
-            <a href="" class="right pad">RIDESHARE</a>
-            <a href="" class="right pad">STARLINK</a>
-        </div>
-        <div class="nvleft">
-            <a href="" class="left pad">SHOP</a>
-            <div class="hamburger pad">
-                <div class="peice"></div>
-                <div class="peice"></div>
-                <div class="peice"></div>
+        <nav>
+            <div class="nvright">
+                <img class="img" src="space.png" alt="spacex">
+                <a href="" class="right pad">FALCON 9</a>
+                <a href="" class="right pad">FALCON HEAVY</a>
+                <a href="" class="right pad">DRAGON</a>
+                <a href="" class="right pad">STARSHIP</a>
+                <a href="" class="right pad">HUMAN SPACEFliGHT</a>
+                <a href="" class="right pad">RIDESHARE</a>
+                <a href="" class="right pad">STARLINK</a>
             </div>
-        </div>
-    </nav>
-    <div class="writing anm">
-    <h4>RECENT MISSION</h4>
-    <h1>INTELSAT G-31/G-32</h1>
-     <h1>MISSION</h1>
-    <button class="rewatch">REWATCH</button>
-</div>
-</header>
-<section class="first">
-    <div class="writing2 anm">
-        <h4>RECENT MISSION</h4>
-        <h1>USSF-44 MISSION</h1>
-        <button class="rewatch">REWATCH</button>
-    </div>
+            <div class="nvleft">
+                <a href="" class="left pad">SHOP</a>
+                <div class="hamburger pad">
+                    <div class="peice"></div>
+                    <div class="peice"></div>
+                    <div class="peice"></div>
+                </div>
+            </div>
+        </nav>
+        <section id="cookie">
 
-</section>
-<section class="second">
-    <div class="writing3 anm">
-        <h1>STARSHIP UPDATE</h1>
-        <button class="rewatch">LEARN MORE</button>
-    </div>
-</section>
-<section class="third">
-    <div class="writing3 anm">
-        <h1>STARSHIP TO LAND</h1>
-        <h1>NASA ASTRONAUTS ON</h1>
-        <h1>THE MOON</h1>
-        <button class="rewatch">LEARN MORE</button>
-    </div>
-</section>
-<footer>
-    <ul>
-        <li class="SPC">SPACEX © 2022</li>
-    </ul>
+
+            <div id="consent-popup" class="hidden">
+                <img src="cookie.png" alt="cookies" class="cookiepic">
+                <p>This site uses cookies to offer you a better browsing experience. Find out more on how we use cookies
+                    and how you can change your settings.</p>
+                    <div class="click">
+                    <a id="accept" href="#">Accept</a>
+                     <a class="a1" href="#">Terms and Conditions</a>
+                    </div>
+            </div>
+
+            
+        </section>
+        <script src="app.js"></script>
+        <div class="writing anm">
+            <h4>RECENT MISSION</h4>
+            <h1>INTELSAT G-31/G-32</h1>
+            <h1>MISSION</h1>
+            <button class="rewatch">REWATCH</button>
+        </div>
+    </header>
+    <section class="first">
+        <div class="writing2 anm">
+            <h4>RECENT MISSION</h4>
+            <h1>USSF-44 MISSION</h1>
+            <button class="rewatch">REWATCH</button>
+        </div>
+
+    </section>
+    <section class="second">
+        <div class="writing3 anm">
+            <h1>STARSHIP UPDATE</h1>
+            <button class="rewatch">LEARN MORE</button>
+        </div>
+    </section>
+    <section class="third">
+        <div class="writing3 anm">
+            <h1>STARSHIP TO LAND</h1>
+            <h1>NASA ASTRONAUTS ON</h1>
+            <h1>THE MOON</h1>
+            <button class="rewatch">LEARN MORE</button>
+        </div>
+    </section>
+    <footer>
+        <ul>
+            <li class="SPC">SPACEX © 2022</li>
+        </ul>
         <div class="elon">
-        <li>TWITTER</li>
-        <li>YOUTUBE</li>
-        <li>INSTAGRAM</li>
-        <li>FLICKR</li>
-        <li>LINKEDIN</li>
-        <li class="rule">PRIVACY POLICY</li>
-        <li class="rule">SUPPLIERS</li>
-    </div>
-</footer>
-</body> 
+            <li>TWITTER</li>
+            <li>YOUTUBE</li>
+            <li>INSTAGRAM</li>
+            <li>FLICKR</li>
+            <li>LINKEDIN</li>
+            <li class="rule">PRIVACY POLICY</li>
+            <li class="rule">SUPPLIERS</li>
+        </div>
+    </footer>
+</body>
+
 </html>
